haproxy/rbac.yml
---
apiVersion: v1
kind: Namespace
metadata:
  name: ingress-controller
