haproxy/ingsvc.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    run: haproxy-ingress
  name: haproxy-ingress
spec:
  externalTrafficPolicy: Cluster
  ports:
  - name: port-1
    nodePort: 30393
    port: 80
    protocol: TCP
    targetPort: 80
  - name: port-2
    nodePort: 32687
    port: 443
    protocol: TCP
    targetPort: 443
  - name: port-3
    nodePort: 31379
    port: 1936
    protocol: TCP
    targetPort: 1936
  selector:
    run: haproxy-ingress
  sessionAffinity: None
  type: NodePort
status:
  loadBalancer: {}
