haproxy/ing.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: app
spec:
  rules:
  - host: 
    http:
      paths:
      - path: /
        backend:
          serviceName: game2048
          servicePort: 80
